center in css.html

--- a/guides/css/css selector.html
+++ b/guides/css/css selector.html
@@ -12,9 +12,9 @@
 
 
 
-        <details class="typeDetails" open>
+        <details class="typeDetails">
             <summary><strong>Simple Selector</strong></summary>
-            <div class="line_div div_card">
+            <div class="branch card">
                 Type Selector: <code>p{}</code><br>
                 Class Selector: <code>.class{}</code><br>
                 ID Selector: <code>#id{}</code><br>
@@ -27,10 +27,10 @@
 
 
 
-        <details class="typeDetails" open>
+        <details class="typeDetails">
             <summary><strong>Attribute Selector</strong></summary>
-            <div class="line_div div_card">
-                <p><span class="tspan">Introduction</span></p>
+            <div class="branch card">
+                <p><span class="chapter">Introduction</span></p>
                 <div class="note">
                     <strong>Presence and value attribute selectors:</strong><br>
                     <ul>
@@ -49,8 +49,8 @@
         
             </div>
 
-            <div class="line_div div_card">
-                <p><span class="tspan">Example</span></p>
+            <div class="branch card">
+                <p><span class="chapter">Example</span></p>
                 <div style="margin: 5px;">
                     <label for="attr_sel">choose the selector :</label><br>
                     <code>document.getElementById('attrContainer').querySelector("</code>
@@ -82,10 +82,10 @@
 
 
 
-        <details class="typeDetails" open>
+        <details class="typeDetails">
             <summary><strong>combinators and selector lists</strong></summary>
-            <div class="line_div div_card">
-                <p><span class="tspan">Introduction</span></p>
+            <div class="branch card">
+                <p><span class="chapter">Introduction</span></p>
                 <div class="note">
                     <strong>combinators and selector lists:</strong><br>
                     <ul>
@@ -98,8 +98,8 @@
                 </div>
             </div>
 
-            <div class="line_div div_card">
-                <p><span class="tspan">Example : <code>A, B</code></span></p>
+            <div class="branch card">
+                <p><span class="chapter">Example : <code>A, B</code></span></p>
                 <div class="note">
                     <code>#d1, .c1, div[name="n1"] {<br>&nbsp;&nbsp;&nbsp;&nbsp;width: 100px; height: 100px; border: 2px dashed blue; margin: 5px;<br>}</code>
                 </div>
@@ -112,8 +112,8 @@
             </div>
 
 
-             <div class="line_div div_card">
-                <p><span class="tspan">Example : <code>A B</code></span></p>
+             <div class="branch card">
+                <p><span class="chapter">Example : <code>A B</code></span></p>
                 <div class="note">
                     <code>.c2 div {<br>&nbsp;&nbsp;&nbsp;&nbsp;border: 1px solid blue; margin: 10px; margin: 5px;<br>}</code><br>
                     <code>B1, B2, C1, C2</code> all matching
@@ -136,8 +136,8 @@
                 </div>
             </div>
 
-            <div class="line_div div_card">
-                <p><span class="tspan">Example : <code>A>B</code></span></p>
+            <div class="branch card">
+                <p><span class="chapter">Example : <code>A>B</code></span></p>
                 <div class="note">
                     <code>.c5>div {<br>&nbsp;&nbsp;&nbsp;&nbsp;border: 1px solid blue; margin: 10px; margin: 5px;<br>}</code><br>
                     <code>B1, B2</code> is direct child matching <br>
@@ -163,8 +163,8 @@
             </div>
 
 
-              <div class="line_div div_card">
-                <p><span class="tspan">Example : <code>A+B</code></span></p>
+              <div class="branch card">
+                <p><span class="chapter">Example : <code>A+B</code></span></p>
                 <div class="note">
                     <code>.c3+div {<br>&nbsp;&nbsp;&nbsp;&nbsp;background: red;<br>}</code>
                 </div>
@@ -178,8 +178,8 @@
                  </div>
             </div>
 
-            <div class="line_div div_card">
-                <p><span class="tspan">Example : <code>A~B</code></span></p>
+            <div class="branch card">
+                <p><span class="chapter">Example : <code>A~B</code></span></p>
                 <div class="note">
                     <code>.c4~div {<br>&nbsp;&nbsp;&nbsp;&nbsp;background: red;<br>}</code>
                 </div>
@@ -197,7 +197,7 @@
 
         <details class="typeDetails" open>
             <summary><strong>Pseudo Selector</strong></summary>
-            <div class="line_div div_card">
+            <div class="branch card">
                 <div class="note">
                     <ul>
                         <li><code>:first-child</code> select the first element within another element</li>
