--- a/guides/css/styling boxes.html
+++ b/guides/css/styling boxes.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="styling_boxes.js"></script>
 </head>
 <body>
-    <p><span class="tspan">box model rectangle & box-sizing</span></p>
+    <p><span class="chapter">box model rectangle & box-sizing</span></p>
     <div>
         <!-- box model -->
         <div>
@@ -41,7 +41,7 @@
         </div>
 
         <!-- overflow -->
-        <p><span class="tspan">overflow</span></p>
+        <p><span class="chapter">overflow</span></p>
         <div>
             <code><label for="ofSel">overflow: </label></code>
             <select name="ofSel" onchange="overflow_changed(event)">
@@ -61,7 +61,7 @@
         </div>
 
         <!-- background-clip -->
-        <p><span class="tspan">background-clip</span></p>
+        <p><span class="chapter">background-clip</span></p>
         <div>
             <code><label for="bcSel">background-clip: </label></code>
             <select name="bcSel" onchange="background_clip_changed(event)">
@@ -80,7 +80,7 @@
         </div>
 
         <!-- background-clip -->
-        <p><span class="tspan">margin collapsing</span></p>
+        <p><span class="chapter">margin collapsing</span></p>
         <p class="note">if two adjacent elements both have the margin set on them. and the two margins touch, the larger of the two remains, and the smaller one disappears. (effect on vertical, not horizontal) </p>
         <div style="padding: 5px; border: 1px dashed black; display: inline-block;margin-right: 20px;">
             <div style="border: 2px solid black; margin-bottom: 10px; width: 200px;height: 50px;">
@@ -92,7 +92,7 @@
         </div>
 
          <!-- background-clip -->
-        <p><span class="tspan">outline</span></p>
+        <p><span class="chapter">outline</span></p>
         <div style="border: 1px dashed black;padding: 5px; width: 400px;" >
             <div class="outline">
                 <code>
@@ -108,7 +108,7 @@
         </div>
         
         <!-- background -->
-        <p><span class="tspan">background</span></p>
+        <p><span class="chapter">background</span></p>
         <div class="note">
             <p>
                 <code>background-color : rgba(255,255,255, 0.3);</code> -default color is not <code>white</code> but <code>transparent</code>
@@ -150,7 +150,7 @@
         </div>
 
         <!-- border -->
-        <p><span class="tspan">border</span></p>
+        <p><span class="chapter">border</span></p>
         <div class="note" style="border: 1px solid black">
             <code>border: border-width border-style border-color;</code><br>
             <code>border-radius: 20px;</code> used like <code>margin</code>
@@ -178,7 +178,7 @@
             
         </div>
 
-        <p><span class="tspan">box-shadow</span></p>
+        <p><span class="chapter">box-shadow</span></p>
         <div class="note">
             <p><code>box-shadow: 5px 5px 5px rgba(255,225,0,0.5);</code></p>
             four params in <code>box-shadow</code>
@@ -202,7 +202,7 @@
             </div>
         </div>
 
-        <p><span class="tspan">filters</span></p>
+        <p><span class="chapter">filters</span></p>
         <div class="note">
             <div class="filterBox" 
             style="background: url(https://interactive-examples.mdn.mozilla.net/media/examples/firefox-logo.svg) no-repeat;
