--- a/index.html
+++ b/index.html
@@ -26,3 +26,12 @@
        </details>
 </body>
 </html>
+
+<p><strong>sumblime text:</strong></p>
+<p>Colorpicker</p>
+<p>JavaScript Completions</p>
+<p>BracketHighlighter</p>
+<p>JSFormat</p>
+<p>Emmet</p>
+<p>DocBlockr</p>
+<p>SublimeLinter</p>
