--- a/guides/css/css flexbox grid float.html
+++ b/guides/css/css flexbox grid float.html
@@ -175,7 +175,22 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <code>grid-template: grid-template-rows / grid-template-columns</code><br>
+                    for example: <code>grid-template: auto 50px auto / 25px auto 25px</code>
+                </li>
                 <li><code>grid-template-area: </code> <a href="https://css-tricks.com/snippets/css/complete-guide-grid/#grid-animation">guides</a></li>
+                <li><code>grid-column-gap</code></code></li>
+                <li><code>grid-row-gap</code></li>
+                <li><code>grid-gap: grid-row-gap grid-row-gap</code>  the shorthand</li>
+                <li><code>justify-items</code></li>
+                <li><code>align-items</code></li>
+                <li><code>place-items</code></li>
+                <li><code>justify-content</code></li>
+                <li><code>align-content</code></li>
+                <li><code>place-content</code></li>
+                <li><code>grid-auto-columns</code></li>
+                <li><code>grid-auto-rows</code></li>
             </ul>
         </div>
 
