--- a/guides/js/JS Design Partterns.html
+++ b/guides/js/JS Design Partterns.html
@@ -7,8 +7,11 @@
 
     <script type="text/javascript">
           /* jshint esversion: 6 */ 
+
+  
         var designPartterns = [
-            "Singleton"
+            "Singleton",
+            "Constructor_js"                   
         ];
 
         //onload
